working globe rotation with leap motion

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				eye: [ 0, 300, 1800 ],
 				up: [ 0, 1, 0 ],
 				fov: 30,
-				angle: 120,
+				angle: 90,
 				rotation: 101.25
 			},
 			{ 
@@ -66,9 +66,21 @@
 				eye: [ 0, 300, 1800 ],
 				up: [ 0, 1, 0 ],
 				fov: 30,
-				angle: 240,
+				angle: 180,
 				rotation: -101.25
 			},
+			{ 
+				left: 0.5,
+				bottom: 0.5,
+				width: 0.5,
+				height: 0.5,
+				background: { r: 0.0, g: 0.0, b: 0.0, a: 1 },
+				eye: [ 0, 300, 1800 ],
+				up: [ 0, 1, 0 ],
+				fov: 30,
+				angle: 270,
+				rotation: 101.25
+			}
 		];
 		
 		// create a Directional light as pretend sunshine.
