--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>4 Cameras - With Leap Motion Controls</title>
+    <title>HoloLight</title>
     <style>
       body{margin: 0px; padding: 0px; background-color: black;}
       canvas {width: 100%; height: 100%; background-color: black;}
